# PiscineRust

./: .gitignore
module00/ex01/: min.rs
module00/ex02/: collatz.rs  print_bytes.rs  yes.rs
module00/ex03/: fizzbuzz.rs
module00/ex04/: Cargo.toml
module00/ex04/src/: main.rs  other.rs  overflow.rs
module00/ex05/src/: main.rs
module00/ex06/src/: main.rs
module00/ex07/: Cargo.toml
module00/ex07/src/: lib.rs  main.rs
module01/ex00/src/: lib.rs
module01/ex01/src/: lib.rs
module01/ex02/src/: lib.rs
module01/ex03/src/: lib.rs
module01/ex04/src/: lib.rs
module01/ex05/src/: lib.rs
module01/ex06/src/: lib.rs
module01/ex07/: Cargo.toml
module01/ex07/src/: main.rs
module02/ex00/src/: main.rs
module02/ex01/src/: lib.rs
module02/ex02/src/: lib.rs
module02/ex03/src/: main.rs
module02/ex04/: Cargo.toml
module02/ex04/src/: main.rs
module02/ex05/src/: lib.rs
module02/ex06/: Cargo.toml
module02/ex06/src/: main.rs
module02/ex07/: Cargo.toml
module02/ex07/src/: main.rs  main2.rs
module03/ex00/: Cargo.toml
module03/ex00/src/: main.rs
module03/ex01/src/: lib.rs
module03/ex02/src/: main.rs
module03/ex03/src/: main.rs
module03/ex04/src/: main.rs
module03/ex05/src/: lib.rs
module03/ex06/src/: lib.rs
module03/ex07/src/: main.rs
module04/ex00/src/: main.rs
module04/ex01/: Cargo.toml
module04/ex01/src/: collatz.rs  print_bytes.rs  yes.rs
module04/ex02/src/: lib.rs
module04/ex03/src/: main.rs
module04/ex04/src/: lib.rs
module04/ex05/src/: main.rs
module05/: Cargo.toml
module06/ex05/: Cargo.toml
(+11 files in other folders)
