[package]
name = "ex01"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "collatz"
path = "src/collatz.rs"

[[bin]]
name = "yes"
path = "src/yes.rs"

[[bin]]
name = "print_bytes"
path = "src/print_bytes.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
